# smart-lock-esp32c3

./: README.docx  README.md  gentemppwd.c
doorbell-client/: CMakeLists.txt  sdkconfig.old
doorbell-client/main/: CMakeLists.txt  Kconfig.projbuild  main.c
doorbell-client/main/drivers/: WIFI_Driver.c  WIFI_Driver.h
smart-lock/: CMakeLists.txt  README.md  partition_ota.csv  sdkconfig  sdkconfig.old
smart-lock-0722/: CMakeLists.txt  sdkconfig  sdkconfig.old
smart-lock-0722/.cache/clangd/index/: AUDIO_Driver.c.EA8F31B4EB72F3C6.idx  AUDIO_Driver.h.1F43A53DB5E4CE6A.idx  BT_Driver.c.5015FB4C76A521BE.idx  BT_Driver.h.A67DDA712F08D53F.idx  FINGER_Driver.c.2506139D65A569DA.idx  (+14 more)
smart-lock-0722/main/: CMakeLists.txt  Kconfig.projbuild  main.c
smart-lock-0722/main/Dri/: AUDIO_Driver.c  AUDIO_Driver.h  BT_Driver.c  BT_Driver.h  FINGER_Driver.c  FINGER_Driver.h  KEYBOARD_Driver.c  KEYBOARD_Driver.h  LED_Driver.c  LED_Driver.h  MOTOR_Driver.c  MOTOR_Driver.h  OTA_Driver.c  OTA_Driver.h  PASSWORD_Driver.c  PASSWORD_Driver.h  SNTP_Driver.c  SNTP_Driver.h  Utils.c  Utils.h  WIFI_Driver.c  WIFI_Driver.h
smart-lock/main/: CMakeLists.txt  Kconfig.projbuild  smart_lock_main.c
smart-lock/main/drivers/: AUDIO_Driver.c  AUDIO_Driver.h  BLUETOOTH_Driver.c  BLUETOOTH_Driver.h  FINGERPRINT_Driver.c  FINGERPRINT_Driver.h  KEYBOARD_Driver.c  KEYBOARD_Driver.h  LED_Driver.c  LED_Driver.h  MOTOR_Driver.c  MOTOR_Driver.h  MQTT_Driver.c  MQTT_Driver.h  OTA_Driver.c  OTA_Driver.h  PASSWORD_Driver.c  PASSWORD_Driver.h  SNTP_Driver.c  SNTP_Driver.h  WIFI_Driver.c  WIFI_Driver.h
(+13 files in other folders)
